--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -22,7 +22,7 @@
     border-right: 0px;
     border-color:brown;
     color:brown;
-    background-color: #eddada;
+    background-color: #FBE8E8;
 }
 
 .mainval{ 
